<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <include layout="@layout/tool_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_descripcion"
            android:id="@+id/txt_titulo_app"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="150dp"
            android:textColor="@color/white"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ppl_descripcion"
            android:id="@+id/txt_descripcion_app"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_version_text"
            android:id="@+id/txt_version_app"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_anio"
            android:id="@+id/txt_anio_app"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_by"
            android:id="@+id/txt"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_desarollador"
            android:id="@+id/str_desarollador"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:textStyle="normal"/>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_info_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_dialog_email"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@color/geoservicar"/>

</androidx.constraintlayout.widget.ConstraintLayout>
