<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_icon">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ppl_descripcion"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_vertical"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/circle_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_icon_app3"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name1"
                android:textSize="24dp"
                android:padding="2dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name2"
                android:textSize="22dp"
                android:padding="1dp"
                android:textStyle="bold"
                android:textColor="@color/green"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarCircular"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:translationZ="2dp"
        android:theme="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginBottom="@dimen/margen_progressbar" />

</RelativeLayout>