<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/bg_10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/circle_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_icon_app3"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name1"
                android:textSize="24dp"
                android:padding="2dp"
                android:textStyle="bold"
                android:textColor="@color/white" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name2"
                android:textSize="22dp"
                android:padding="1dp"
                android:textStyle="bold"
                android:textColor="@color/green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="100dp">



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/imageView"
                    android:background="@drawable/img_icon_login_user"
                    android:backgroundTint="@color/white"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    >

                    <EditText
                        android:id="@+id/txt_usuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/str_usuario"
                        android:text="jp"
                        android:layout_marginLeft="5dp"
                        android:textSize="19dp"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        android:inputType="textNoSuggestions"
                        android:imeOptions="actionNext"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/imageView2"
                    android:background="@drawable/img_icon_password"
                    android:backgroundTint="@color/white"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    >

                    <EditText
                        android:id="@+id/txt_contrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical"
                        android:textSize="19dp"
                        android:text="jp"
                        android:hint="@string/str_contraseña"
                        android:inputType="textPassword"
                        android:imeOptions="actionNext"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/imageView3"
                    android:background="@drawable/ic_location"
                    android:backgroundTint="@color/white"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    >

                    <EditText
                        android:id="@+id/txt_ip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="157.230.92.7"
                        android:textSize="19dp"
                        android:hint="ip"
                        android:gravity="center_vertical"
                        android:inputType="textNoSuggestions"
                        android:imeOptions="actionNext"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/imageView4"
                    android:background="@drawable/ic_desconectado"
                    android:backgroundTint="@color/white"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    >

                    <EditText
                        android:id="@+id/txt_puerto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:gravity="center_vertical"
                        android:text="3119"
                        android:textSize="19dp"
                        android:hint="puerto"
                        android:inputType="textNoSuggestions"
                        android:imeOptions="actionDone"
                        />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    </RelativeLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_menu_send"
        app:borderWidth="0dp"
        app:elevation="6dp"
        app:pressedTranslationZ="12dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:backgroundTint="@color/geoservicar"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>